# rp-mass-and-com

./: .gitignore  rp-mass-and-com-standalone.code-workspace  run_things.sh
pcd_files/: 2x_rotated_torus.ply  4x_rotated_torus.pcd  4x_rotated_torus_data.txt  pcd_creation.blend  pcd_creation.blend1  pcd_creation_triangulated.blend  pcd_creation_triangulated.blend1  rotated_cone.pcd  rotated_cone_legacy.mtl  rotated_scaled_cube.pcd  rotated_torus_data.txt  rotated_torus_smooth_shaded_triangulated.ply
pcd_files/partial_view_generated_clouds/: cone_triangulated_lc_cam_0.pcd  cone_triangulated_lc_cam_1.pcd  cone_triangulated_lc_cam_2.pcd  cube_triangulated_lc_cam_0.pcd  cube_triangulated_lc_cam_1.pcd  cube_triangulated_lc_cam_2.pcd  cylinder_triangulated_lc_cam_0.pcd  cylinder_triangulated_lc_cam_1.pcd  cylinder_triangulated_lc_cam_2.pcd  torus_triangulated_lc_cam_0.pcd  torus_triangulated_lc_cam_1.pcd  torus_triangulated_lc_cam_2.pcd
pcl_test/: CMakeLists.txt  pcd_write.cpp
rp-mass-and-com-standalone/: notes.txt
rp-mass-and-com-standalone-unity/: Assembly-CSharp.csproj  rp-mass-and-com-standalone.sln
rp-mass-and-com-standalone-unity/ProjectSettings/: ProjectSettings.asset
rp-mass-and-com-standalone/source/: CMakeLists.txt  bounding_box.cpp  center_of_mass.cpp  center_of_mass_estimation_obj.cpp  center_of_mass_estimation_pcd.cpp  conversion.cpp  data_reading.cpp  data_reading.hpp  data_writing.cpp  dump.cpp  pcd_write.cpp  pcl_visualizer_demo.cpp  surface_utils.cpp  surface_utils.hpp  visualization.cpp  visualize_partial_view.cpp  volume_estimation.cpp  volume_estimation_obj.cpp  volume_estimation_pcd.cpp  volume_estimation_ply.cpp
rp-mass-and-com-standalone/testing/: clear-output-dirs.sh  test_volume_full_mesh.py  test_volume_full_mesh.sh  test_volume_resolutions.py
testing/: run_things.sh  test_com_full_mesh.py  test_com_partial_view.py  test_com_resolutions.py  test_volume_full_mesh.py  test_volume_partial_view.py  test_volume_resolutions.py
(+85 files in other folders)
